# Box64AndWine

./: .gitignore  .gitmodules  LICENSE  README.md  build.sh  clickable.json
.github/workflows/: github-actions.yaml
src/: CMakeLists.txt  box64andwine.desktop.in  main.cpp  manifest.json.in
src/assets/: assets.qrc
src/plugins/: CMakeLists.txt
src/plugins/Box64AndWine/: CMakeLists.txt  box64.conf  commandrunner.cpp  commandrunner.h  featuremanager.cpp  featuremanager.h  plugin.cpp  plugin.h  qmldir  wine64.conf  winebox.conf
src/po/: CMakeLists.txt  box64andwine.ubports.pot
src/qml/: Main.qml
src/wrappers/: CMakeLists.txt  box64.cpp  common.h  wine64.cpp
src/wrappers/i386/: CMakeLists.txt  box86.cpp  wine.cpp
src/wrappers/x86_64/: CMakeLists.txt  box64.cpp  wine64.cpp  winedetect.cpp
